--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,18 @@
 
     <ImageView
         android:id="@+id/logo_imdb"
-        android:layout_width="237dp"
-        android:layout_height="173dp"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/imdb_logo" />
+        android:src="@drawable/imdb_logo"/>
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@drawable/loader"
+        android:src="@drawable/loader"
         tools:layout_editor_absoluteX="155dp"
         tools:layout_editor_absoluteY="424dp" />
 
