--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -8,30 +8,73 @@
     tools:context=".LoginActivity">
 
     <ImageView
-
         android:id="@+id/logo_imdb"
-        android:layout_width="200dp"
-        android:layout_height="1170dp"
+        android:layout_width="125dp"
+        android:layout_height="100dp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_usuario"
 
 
-
-        android:layout_marginTop="100dp"
-        app:srcCompat="@drawable/imdb_logo" />
+        app:srcCompat="@drawable/imdb_logo"
+        tools:layout_editor_absoluteX="120dp" />
 
     <TextView
         android:id="@+id/txt_usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="52dp"
         android:text="@string/usuario"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/logo_imdb" />
+        app:layout_constraintTop_toBottomOf="@+id/logo_imdb"
+        tools:layout_editor_absoluteX="29dp" />
 
     <EditText
+        android:id="@+id/input_usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="223dp" />
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintTop_toTopOf="@+id/txt_usuario"
+        tools:layout_editor_absoluteY="368dp" />
+
+    <ImageView
+        android:id="@+id/apple_logo"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:contentDescription="apple_logo"
+        android:src="@drawable/apple_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/facebook_logo"
+
+        app:layout_constraintTop_toBottomOf="@+id/input_usuario"/>
+
+    <ImageView
+        android:id="@+id/facebook_logo"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:contentDescription="facebook_logo"
+        android:src="@drawable/facebook_logo"
+
+        app:layout_constraintStart_toEndOf="@+id/apple_logo"
+        app:layout_constraintEnd_toStartOf="@+id/google_logo"
+
+        app:layout_constraintTop_toBottomOf="@+id/input_usuario"/>
+
+    <ImageView
+        android:id="@+id/google_logo"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:contentDescription="google_logo"
+        android:src="@drawable/google_logo"
+
+        app:layout_constraintStart_toEndOf="@+id/facebook_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@+id/input_usuario"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
