--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,26 @@
 
     <ImageView
         android:id="@+id/logo_imdb"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
+        android:layout_width="153dp"
+        android:layout_height="105dp"
+        android:src="@drawable/imdb_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/imdb_logo"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/loader_imdb"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="6dp"
         android:src="@drawable/loader"
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="424dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo_imdb"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
