--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -11,70 +11,104 @@
         android:id="@+id/logo_imdb"
         android:layout_width="125dp"
         android:layout_height="100dp"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/txt_usuario"
-
-
         app:srcCompat="@drawable/imdb_logo"
         tools:layout_editor_absoluteX="120dp" />
 
     <TextView
         android:id="@+id/txt_usuario"
+        android:text="@string/usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="52dp"
-        android:text="@string/usuario"
+        app:layout_constraintTop_toBottomOf="@+id/logo_imdb"
+        android:layout_marginStart="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/gray_title"
+        android:fontFamily="sans-serif-condensed-light"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
+
+
+
+    <TextView
+        android:id="@+id/txt_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:fontFamily="sans-serif-condensed-light"
+        android:text="@string/contraseña"
+        android:textColor="@color/gray_title"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/logo_imdb"
-        tools:layout_editor_absoluteX="29dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/input_user" />
 
-    <EditText
-        android:id="@+id/input_usuario"
+
+    <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        app:layout_constraintTop_toTopOf="@+id/txt_usuario"
-        tools:layout_editor_absoluteY="368dp" />
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:background="@color/white"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toTopOf="@+id/txt_password"
+        tools:layout_editor_absoluteX="25dp" />
+
+
+
+
+
 
     <ImageView
         android:id="@+id/apple_logo"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:contentDescription="apple_logo"
+        android:contentDescription="@string/apple_logo"
         android:src="@drawable/apple_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/facebook_logo"
 
-        app:layout_constraintTop_toBottomOf="@+id/input_usuario"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_password"/>
 
     <ImageView
         android:id="@+id/facebook_logo"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:contentDescription="facebook_logo"
+        android:contentDescription="@string/facebook_logo"
         android:src="@drawable/facebook_logo"
 
         app:layout_constraintStart_toEndOf="@+id/apple_logo"
         app:layout_constraintEnd_toStartOf="@+id/google_logo"
 
-        app:layout_constraintTop_toBottomOf="@+id/input_usuario"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_password"/>
 
     <ImageView
         android:id="@+id/google_logo"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:contentDescription="google_logo"
+        android:contentDescription="@string/google_logo"
         android:src="@drawable/google_logo"
 
         app:layout_constraintStart_toEndOf="@+id/facebook_logo"
         app:layout_constraintEnd_toEndOf="parent"
 
-        app:layout_constraintTop_toBottomOf="@+id/input_usuario"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_password"/>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="391dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="526dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="hint" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
