--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,6 +12,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            android:background="@color/white"
+            />
+
         <ImageView
             android:id="@+id/logo_registration"
             android:layout_width="100dp"
@@ -36,6 +43,7 @@
             android:hint="@string/name"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -81,7 +89,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/tie_passwordRegistration"
                 android:inputType="textPassword"
-                android:background="@color/white"/>
+                />
+
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -92,6 +101,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
+            android:backgroundTint="@color/colorPrimary"
             android:text="@string/accept_button"
             android:textStyle="bold"/>
 
