--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -8,7 +8,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_search"
@@ -29,10 +31,19 @@
 
                 android:background="@drawable/rounded_corners2"/>
 
+
         </com.google.android.material.textfield.TextInputLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_view_holder_movie_linear_vertical">
 
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
+
 
 </ScrollView>
